--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,11 @@ dependencies:
   intl: ^0.18.1
   fl_chart: ^0.41.0
   url_launcher: ^6.2.5
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  build_runner: ^2.4.9
+  searchfield: ^1.0.1
+  timeline_tile: ^2.0.0
 
 
 dev_dependencies:
@@ -29,6 +34,8 @@ dev_dependencies:
 
   flutter_lints: ^2.0.0
   flutter_launcher_icons: ^0.13.1
+  hive_generator: ^2.0.0
+  build_runner: ^2.3.3
 
 flutter_launcher_icons:
   image_path: "assets/images/nilogo.png"
