--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   build_runner: ^2.4.9
   searchfield: ^1.0.1
   timeline_tile: ^2.0.0
+  timezone: ^0.9.3
+  introduction_screen: ^3.1.14
+  flutter_image: ^4.1.11
 
 
 dev_dependencies:
