--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   shared_preferences: ^2.0.6
   rflutter_alert: ^2.0.7
   intl: ^0.18.1
-  fl_chart: ^0.41.0
+  fl_chart: ^0.68.0
   url_launcher: ^6.2.5
   hive: ^2.2.3
   hive_flutter: ^1.1.0
@@ -29,6 +29,13 @@ dependencies:
   timezone: ^0.9.3
   introduction_screen: ^3.1.14
   flutter_image: ^4.1.11
+  video_player: ^2.9.1
+  chewie: ^1.8.1
+  firebase_core: ^3.2.0
+  firebase_messaging: ^15.0.3
+  flutter_local_notifications: ^17.2.1+2
+  flutter_native_image: ^0.0.6+1
+  device_info_plus: ^10.1.0
 
 
 dev_dependencies:
