--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,8 @@ dependencies:
   firebase_core: ^3.2.0
   firebase_messaging: ^15.0.3
   flutter_local_notifications: ^17.2.1+2
-  flutter_native_image: ^0.0.6+1
   device_info_plus: ^10.1.0
+  logger: ^2.4.0
 
 
 dev_dependencies:
