--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: A new Flutter project.
 publish_to: 'none'
 
 
-version: 4.0.0+11
+version: 4.0.0+12
 
 environment:
   sdk: '>=2.19.6 <3.0.0'
@@ -36,6 +36,7 @@ dependencies:
   flutter_local_notifications: ^17.2.1+2
   device_info_plus: ^10.1.0
   logger: ^2.4.0
+  otp_pin_field: ^1.3.1
 
 
 dev_dependencies:
@@ -45,7 +46,6 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_launcher_icons: ^0.13.1
   hive_generator: ^2.0.0
-  build_runner: ^2.3.3
 
 flutter_launcher_icons:
   image_path: "assets/images/nilogo.png"
