--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: A new Flutter project.
 publish_to: 'none'
 
 
-version: 4.0.0+12
+version: 4.0.0+16
 
 environment:
   sdk: '>=2.19.6 <3.0.0'
@@ -59,3 +59,4 @@ flutter:
 
   assets:
     - assets/images/
+    - shorebird.yaml
