--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: A new Flutter project.
 publish_to: 'none'
 
 
-version: 4.0.0+16
+version: 5.0.0+18
 
 environment:
   sdk: '>=2.19.6 <3.0.0'
@@ -37,6 +37,8 @@ dependencies:
   device_info_plus: ^10.1.0
   logger: ^2.4.0
   otp_pin_field: ^1.3.1
+  fluttertoast: ^8.2.10
+  shorebird_code_push: ^2.0.2
 
 
 dev_dependencies:
